--- a/app/Resources/views/admin/fields/tab_details.html.twig
+++ b/app/Resources/views/admin/fields/tab_details.html.twig
@@ -19,7 +19,7 @@
 
             {{ macro.row('description'|trans, field.description) }}
 
-            {% if (field.type != constant('eTraxis\\Dictionary\\FieldType::CHECKBOX')) %}
+            {% if (field.type != 'checkbox') %}
                 {{ macro.row('field.required'|trans, field.isRequired ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
             {% endif %}
         </fieldset>
