--- a/app/Resources/views/admin/states/view.html.twig
+++ b/app/Resources/views/admin/states/view.html.twig
@@ -2,11 +2,11 @@
     <ul>
         <li><a href="{{ path('admin_tab_state_details', {'id': state.id}) }}">{{ 'state'|trans }}</a></li>
 
-        {% if (state.type != constant('eTraxis\\Dictionary\\StateType::IS_FINAL')) %}
+        {% if (state.type != 'final') %}
             <li><a href="{{ path('admin_tab_state_transitions', {'id': state.id}) }}">{{ 'state.transitions'|trans }}</a></li>
         {% endif %}
 
-        {% if (state.responsible == constant('eTraxis\\Dictionary\\StateResponsible::ASSIGN')) %}
+        {% if (state.responsible == 'assign') %}
             <li><a href="{{ path('admin_tab_state_responsibles', {'id': state.id}) }}">{{ 'state.responsibles'|trans }}</a></li>
         {% endif %}
     </ul>
