--- a/app/Resources/views/macro.html.twig
+++ b/app/Resources/views/macro.html.twig
@@ -1,4 +1,4 @@
-{% macro row(label, value) %}
+{% macro row(label, value, mode) %}
     <div class="grid-container grid-parent grid-row">
         <div class="grid-25">
             <p class="caption">
@@ -7,7 +7,7 @@
         </div>
         <div class="grid-75">
             <p>
-                {{ value is null ? '&mdash;' : value|nl2br }}
+                {{ value is null ? '&mdash;' : value | bbcode(mode|default('strip')) | nl2br }}
             </p>
         </div>
     </div>
