--- a/app/Resources/views/web/records/_comments.html.twig
+++ b/app/Resources/views/web/records/_comments.html.twig
@@ -4,7 +4,7 @@
         <legend>{{ timestamp ~ ', ' ~ comment.event.user.fullname }}</legend>
         <div class="grid-container grid-parent grid-row">
             <div class="grid-100">
-                <p>{{ comment.text|nl2br }}</p>
+                <p>{{ comment.text|bbcode|nl2br }}</p>
             </div>
         </div>
     </fieldset>
