--- a/app/Resources/views/web/records/_comments.html.twig
+++ b/app/Resources/views/web/records/_comments.html.twig
@@ -1,4 +1,6 @@
-{% for comment in record.comments(is_granted(constant('eTraxis\\Voter\\RecordVoter::PRIVATE_COMMENTS'), record)) %}
+{% set showPrivate = is_granted(constant('eTraxis\\Voter\\RecordVoter::PRIVATE_COMMENTS'), record) %}
+
+{% for comment in record.comments(showPrivate) %}
     <fieldset class="{{ comment.isPrivate ? 'private' : '' }}">
         {% set timestamp = comment.event.createdAt|localizeddate('medium', 'short', app.user.locale, app.user.timezone) %}
         <legend>{{ timestamp ~ ', ' ~ comment.event.user.fullname }}</legend>
