--- a/app/Resources/public/less/etraxis-basic.less
+++ b/app/Resources/public/less/etraxis-basic.less
@@ -69,6 +69,14 @@ footer {
 
 p {
     margin: 0;
+
+    &.attachment-name {
+        padding: 6px 0 0 60px;
+    }
+
+    &.attachment-time {
+        padding: 0 0 6px 60px;
+    }
 }
 
 a {
