--- a/app/Resources/views/web/records/_attachments.html.twig
+++ b/app/Resources/views/web/records/_attachments.html.twig
@@ -1,17 +1,21 @@
-<fieldset>
-    <legend>{{ 'files'|trans }}</legend>
-    {% for attachment in record.attachments %}
-        <div class="grid-container grid-parent grid-row">
-            <div class="grid-100">
-                <img class="left" width="48" height="48" src="{{ asset('images/mimetypes/' ~ attachment.mimeImage) }}">
-                <p class="attachment-name">
-                    {{ attachment.name ~ ' (%.02f %s)'|format(attachment.size / 1024, 'kb'|trans) }}
-                </p>
-                <p class="attachment-time">
-                    {% set timestamp = attachment.event.createdAt|localizeddate('medium', 'short', app.user.locale, app.user.timezone) %}
-                    {{ timestamp ~ ', ' ~ attachment.event.user.fullname }}
-                </p>
+{% set attachments = record.attachments %}
+
+{% if attachments|length != 0 %}
+    <fieldset>
+        <legend>{{ 'files'|trans }}</legend>
+        {% for attachment in attachments %}
+            <div class="grid-container grid-parent grid-row">
+                <div class="grid-100">
+                    <img class="left" width="48" height="48" src="{{ asset('images/mimetypes/' ~ attachment.mimeImage) }}">
+                    <p class="attachment-name">
+                        {{ attachment.name ~ ' (%.02f %s)'|format(attachment.size / 1024, 'kb'|trans) }}
+                    </p>
+                    <p class="attachment-time">
+                        {% set timestamp = attachment.event.createdAt|localizeddate('medium', 'short', app.user.locale, app.user.timezone) %}
+                        {{ timestamp ~ ', ' ~ attachment.event.user.fullname }}
+                    </p>
+                </div>
             </div>
-        </div>
-    {% endfor %}
-</fieldset>
+        {% endfor %}
+    </fieldset>
+{% endif %}
