--- a/app/Resources/views/web/records/_states.html.twig
+++ b/app/Resources/views/web/records/_states.html.twig
@@ -1,10 +1,8 @@
-{% for state in record.allStates %}
+{% for state in record.states(app.user) %}
     <fieldset>
         <legend>{{ state.name }}</legend>
 
-        {% set fields = record.fieldsByState(state, app.user) %}
-
-        {% if fields|length == 0 %}
+        {% if state.fields|length == 0 %}
             <div class="grid-container grid-parent grid-row">
                 <div class="grid-100">
                     <p>{{ 'record.no_fields'|trans }}</p>
@@ -12,29 +10,27 @@
             </div>
         {% endif %}
 
-        {% for field in fields %}
-            {% set value = record.fieldValue(field, app.user) %}
-
-            {% if value is null %}
+        {% for field in state.fields %}
+            {% if field.value is null %}
                 {{ macro.row(field.name, null) }}
             {% elseif field.type == 'number' %}
-                {{ macro.row(field.name, value|localizednumber('decimal', 'default', app.user.locale)) }}
+                {{ macro.row(field.name, field.value|localizednumber('decimal', 'default', app.user.locale)) }}
             {% elseif field.type == 'decimal' %}
-                {{ macro.row(field.name, value|localizednumber('decimal', 'default', app.user.locale)) }}
+                {{ macro.row(field.name, field.value|localizednumber('decimal', 'default', app.user.locale)) }}
             {% elseif field.type == 'string' %}
-                {{ macro.row(field.name, value, 'inline') }}
+                {{ macro.row(field.name, field.value, 'inline') }}
             {% elseif field.type == 'text' %}
-                {{ macro.row(field.name, value, 'all') }}
+                {{ macro.row(field.name, field.value, 'all') }}
             {% elseif field.type == 'checkbox' %}
-                {{ macro.row(field.name, value ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
+                {{ macro.row(field.name, field.value ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
             {% elseif field.type == 'list' %}
-                {{ macro.row(field.name, value) }}
+                {{ macro.row(field.name, field.value) }}
             {% elseif field.type == 'record' %}
-                {{ macro.row(field.name, value) }}
+                {{ macro.row(field.name, field.value) }}
             {% elseif field.type == 'date' %}
-                {{ macro.row(field.name, value|localizeddate('long', 'none', app.user.locale, app.user.timezone)) }}
+                {{ macro.row(field.name, field.value|localizeddate('long', 'none', app.user.locale, app.user.timezone)) }}
             {% elseif field.type == 'duration' %}
-                {{ macro.row(field.name, value) }}
+                {{ macro.row(field.name, field.value) }}
             {% endif %}
         {% endfor %}
 
