--- a/app/Resources/views/master.html.twig
+++ b/app/Resources/views/master.html.twig
@@ -13,6 +13,7 @@
 
         {% if app.environment == 'dev' %}
             <link rel="stylesheet" href="{{ asset('css/normalize.css')                         }}">
+            <link rel="stylesheet" href="{{ asset('css/font-awesome.css')                      }}">
             <link rel="stylesheet" href="{{ asset('css/unsemantic-grid-responsive-no-ie7.css') }}">
             <link rel="stylesheet" href="{{ asset('css/jquery-ui.css')                         }}">
             <link rel="stylesheet" href="{{ asset('css/jquery.dataTables_themeroller.css')     }}">
