--- a/app/Resources/views/admin/groups/tab_members.html.twig
+++ b/app/Resources/views/admin/groups/tab_members.html.twig
@@ -13,12 +13,12 @@
 
     <div class="grid-10 text-center">
         <button type="button" class="grid-row grid-100" onclick="GroupsApp.addUsers({{ group.id }})">
-            <span class="hide-on-mobile">&gt;&gt;</span>
-            <span class="hide-on-desktop ui-icon ui-icon-arrowthick-1-s"></span>
+            <span class="hide-on-mobile fa fa-arrow-right"></span>
+            <span class="hide-on-desktop fa fa-arrow-down"></span>
         </button>
         <button type="button" class="grid-row grid-100" onclick="GroupsApp.removeUsers({{ group.id }})">
-            <span class="hide-on-mobile">&lt;&lt;</span>
-            <span class="hide-on-desktop ui-icon ui-icon-arrowthick-1-n">&lt;&lt;</span>
+            <span class="hide-on-mobile fa fa-arrow-left"></span>
+            <span class="hide-on-desktop fa fa-arrow-up"></span>
         </button>
     </div>
 
