"Please wait" spinner

--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -1,5 +1,6 @@
 @import "etraxis-basic.less";
 @import "etraxis-controls.less";
+@import "etraxis-blockui.less";
 @import "etraxis-datatables.less";
 @import "etraxis-helpers.less";
 @import "etraxis-jquery-ui.less";
