Previous/next record

--- a/app/Resources/views/web/records/tab_details.html.twig
+++ b/app/Resources/views/web/records/tab_details.html.twig
@@ -2,7 +2,7 @@
 
 <div class="grid-row">
     <div class="grid-100">
-        <button type="button" onclick="RecordApp.back()">{{ 'button.back'|trans }}</button>
+        {% include 'web/records/_buttons.html.twig' with { 'record': record, 'previous': previous, 'next': next } %}
     </div>
 </div>
 
