Add totals to the history/attachments

--- a/app/Resources/views/web/records/_attachments.html.twig
+++ b/app/Resources/views/web/records/_attachments.html.twig
@@ -2,7 +2,7 @@
 
 {% if attachments|length != 0 %}
     <fieldset>
-        <legend>{{ 'files'|trans }}</legend>
+        <legend>{{ 'files'|trans }} ({{ attachments|length }})</legend>
         {% for attachment in attachments %}
             <div class="grid-container grid-parent grid-row">
                 <div class="grid-100">
