--- a/app/Resources/views/web/records/view.html.twig
+++ b/app/Resources/views/web/records/view.html.twig
@@ -6,8 +6,12 @@
         <div class="grid-100">
             <div class="tabs" id="tabs-record" data-tab="{{ tab }}">
                 <ul>
-                    <li data-init="RecordApp.initDetails()"><a href="{{ path('web_tab_record_details', {'id': record.id}) }}">{{ record.recordId }}</a></li>
-                    <li data-init="RecordApp.initHistory()"><a href="{{ path('web_tab_record_history', {'id': record.id}) }}">{{ 'record.history'|trans }}</a></li>
+                    <li data-init="RecordApp.initDetails()">
+                        <a href="{{ path('web_tab_record_details', {'id': record.id}) }}">{{ record.recordId }}</a>
+                    </li>
+                    <li data-init="RecordApp.initHistory()">
+                        <a href="{{ path('web_tab_record_history', {'id': record.id}) }}">{{ 'record.history'|trans }} ({{ record.history|length }})</a>
+                    </li>
                 </ul>
             </div>
         </div>
